<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="logo" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo_bhaina"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:shadowColor="@color/primaryDark"
        android:shadowDx="2"
        android:shadowDy="2"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhaina"
            android:textSize="20sp"
            android:elevation="5dp"
            android:background="@drawable/login_button_selector" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhaina"
            android:textSize="20sp"
            android:elevation="5dp"
            android:background="@drawable/login_button_selector" />

    </LinearLayout>


</LinearLayout>